# get-smart-controller

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  app.yaml  esp32s3_devkitm.overlay  prj.conf
boards/: esp32s3_devkitm.conf  esp32s3_devkitm.overlay
dts/bindings/: vendor-prefixes.txt
firmware/: CMakeLists.txt  esp32s3_devkitm.overlay  prj.conf
firmware/dts/bindings/: semtech,sx1278.yaml
firmware/src/: config_mgr.c  config_mgr.h  controller.c  controller.h  main.cpp  mqtt_thread.c  radio.cpp  wifi.c  wifi.h
hardware/design/: fp-lib-table  get-smart-controller.kicad_pcb  get-smart-controller.kicad_pro  get-smart-controller.kicad_sch  sym-lib-table
src/: config_mgr.c  config_mgr.h  controller.c  controller.h  main.c  main.cpp  mqtt_thread.c  mqtt_thread.h  radio.c  radio.h  wifi.c  wifi.h
